--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -1,4 +1,7 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BLE=y
-CONFIG_ZMK_BLE_CLEAR=y
 CONFIG_ZMK_KEYBOARD_NAME="My3x3Pad"
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+CONFIG_EC11=y
