--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -3,3 +3,4 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_KEYBOARD_NAME="My3x3Pad"
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_SETTINGS_RESET_ON_START=y
