--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -4,3 +4,5 @@ CONFIG_ZMK_KEYBOARD_NAME="My3x3Pad"
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
 CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
