--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -6,3 +6,20 @@ CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_ZMK_SETTINGS_RESET_ON_START=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
+## Enable support for displays
+CONFIG_ZMK_DISPLAY=y
+
+## Use the default screen status
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
+
+## Display colors from black to white
+# n - white on black
+# y - black on white
+# CONFIG_ZMK_DISPLAY_INVERT=y
+
+## Display Widgets
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
+CONFIG_ZMK_WIDGET_LAYER_STATUS=y
+CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
+CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
