--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -1,9 +1,9 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BLE=y
-CONFIG_ZMK_KEYBOARD_NAME="My3x3Pad"
+CONFIG_ZMK_KEYBOARD_NAME="NPAD"
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
-CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=n
+CONFIG_ZMK_SETTINGS_RESET_ON_START=n
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
@@ -14,7 +14,7 @@ CONFIG_ZMK_WIDGET_BATTERY_STATUS=y
 CONFIG_ZMK_WIDGET_BATTERY_STATUS_SHOW_PERCENTAGE=y
 CONFIG_ZMK_WIDGET_OUTPUT_STATUS=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=n
-CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=n
+CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 ## Use the default screen status
 
 ## Display colors from black to white
