--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -23,3 +23,16 @@ CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 # CONFIG_ZMK_DISPLAY_INVERT=y
 
 ## Display Widgets
+## bluetooth
+CONFIG_BT=y
+CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_DIS=y
+CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
+
+# Για Just Works pairing χωρίς PIN:
+CONFIG_BT_SMP=y
+CONFIG_BT_L2CAP_TX_MTU=252
+CONFIG_BT_L2CAP_RX_MTU=252
+CONFIG_BT_SETTINGS=y
+CONFIG_BT_HOST_CRYPTO=y
+CONFIG_BT_SMP_SC_ONLY=y
