--- a/boards/shields/macropad_3x3/macropad_3x3.conf
+++ b/boards/shields/macropad_3x3/macropad_3x3.conf
@@ -1,9 +1,10 @@
 CONFIG_ZMK_SLEEP=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_KEYBOARD_NAME="NEKPAD"
-CONFIG_ZMK_BLE_PASSKEY_ENTRY=n
-CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
-CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+# CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+# CONFIG_ZMK_SETTINGS_RESET_ON_START=y
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
@@ -23,13 +24,3 @@ CONFIG_ZMK_DISPLAY_BLANK_ON_IDLE=y
 # CONFIG_ZMK_DISPLAY_INVERT=y
 
 ## Display Widgets
-## bluetooth
-CONFIG_BT=y
-CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_DIS=y
-CONFIG_BT_KEYS_OVERWRITE_OLDEST=y
-
-# Για Just Works pairing χωρίς PIN:
-CONFIG_BT_SMP=y
-CONFIG_BT_SETTINGS=y
-CONFIG_BT_SMP_SC_ONLY=y
